# custom_theme

./: README.md  pyproject.toml  setup.py
custom_theme/: hooks.py  utils.py
custom_theme/custom_theme/doctype/theme_primary_color/: theme_primary_color.json
custom_theme/fixtures/: doctype.json  theme_primary_color.json
custom_theme/public/: build.json
custom_theme/public/css/: accordion.css  custom-main-menu.css  navbar-header.css  overwrite-style.css  responsive.css
custom_theme/public/js/: custom_theme.js  init-layout.js
custom_theme/templates/includes/login/: login.js
