[project]
name = "custom_theme"
version = "0.0.1"
description = "Frappe custom theme by hieumc"
authors = [
    { name = "hieumc", email = "conghieu120@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_theme"]
include-package-data = true
